<package>
  <name>mtsOmegaHapticDevice</name>
  <version>1.3.0</version>
  <description>
  EyeRobot3 robot task
  </description>
  <maintainer email="tlong29@jh.edu">Teng Long</maintainer>
  <license>cisst</license>

  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>
  <build_depend>Eigen3</build_depend>
  
  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
